--- a/.classpath
+++ b/.classpath
@@ -33,9 +33,17 @@
 	<classpathentry kind="lib" path="libWebdriverManager/jackson-annotations-2.10.3.jar"/>
 	<classpathentry kind="lib" path="libWebdriverManager/jackson-core-2.10.3.jar"/>
 	<classpathentry kind="lib" path="libWebdriverManager/jackson-databind-2.10.3.jar"/>
-	<classpathentry kind="lib" path="libWebdriverManager/jcl-over-slf4j-1.7.30.jar"/>
 	<classpathentry kind="lib" path="libWebdriverManager/jna-5.12.1.jar"/>
 	<classpathentry kind="lib" path="libWebdriverManager/slf4j-api-2.0.7.jar"/>
 	<classpathentry kind="lib" path="libWebdriverManager/webdrivermanager-5.4.0.jar"/>
+	<classpathentry kind="lib" path="log4jLib/commons-codec-1.11.jar"/>
+	<classpathentry kind="lib" path="log4jLib/commons-lang3-3.8.1.jar"/>
+	<classpathentry kind="lib" path="log4jLib/commons-logging-1.2.jar"/>
+	<classpathentry kind="lib" path="log4jLib/log4j-1.2.16.jar"/>
+	<classpathentry kind="lib" path="libReportNG/commons-collections-3.2.1.jar"/>
+	<classpathentry kind="lib" path="libReportNG/guice-3.0.jar"/>
+	<classpathentry kind="lib" path="libReportNG/reportng-1.1.4.jar"/>
+	<classpathentry kind="lib" path="libReportNG/reportng-1.1.4-sources.jar"/>
+	<classpathentry kind="lib" path="libReportNG/velocity-1.4.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
