--- a/.classpath
+++ b/.classpath
@@ -12,7 +12,7 @@
 		</attributes>
 	</classpathentry>
 	<classpathentry kind="lib" path="libraries/client-combined-3.141.59-sources.jar"/>
-	<classpathentry kind="lib" path="libraries/selenium-server-standalone-3.141.59.jar"/>
+	<classpathentry kind="lib" path="libraries/selenium-server-standalone-3.141.59.jar" sourcepath="libraries/selenium-server-standalone-3.141.59.jar"/>
 	<classpathentry kind="lib" path="libraries/testng-6.14.3.jar"/>
 	<classpathentry kind="lib" path="libWebdriverManager/bcpkix-jdk15on-1.64.jar"/>
 	<classpathentry kind="lib" path="libWebdriverManager/bcprov-jdk15on-1.64.jar"/>
